# lm-based

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  build_gguf.py  clawrouter.json  clawrouter_config.py  download_model.py  go.mod  host-capabilities.yaml  justfile  llama-swap-runner.py  pyproject.toml  route-config.py  run-qwen35-server.py  run-server.py  serve-observability.py  serve-policy.yaml  summarize_run.py  up
clawrouter/: profiles.json  routes.json
docs/: README.md  architecture.html  chunking-strategies.md  clawrouter-operations.md  credentials.md  embedding-concepts.md  embedding-model-research-brief.md  embedding-model-selection.md  foundations-what-is-an-embedding.md  glossary.md  llama-cpp-latest-build.md  llama-server-cache-architecture-explainer.md  llama-server-stats-faq.md  local-llm-routing-architecture.md  model-card-index.md  open-webui-local-server.md  openai-api-explainer.md  pi-local-model.md  qwen-run-stats.md  qwen3-coder-next-q6k-local-model-card.md  rag-pipeline.md  retrieval-backends.md  retrieval-concepts.md  tokenization.md
docs-cms/: README.md  docs-project.schema.json  docs-project.yaml
llama_swap/: __init__.py  bin.py  cli.py  config.py  pyproject.toml  wrapper.py
lm_launcher/: __init__.py  launcher.py  mlx_server.py  model_identity.py  ouro_server.py  profiles.py  run_capture.py  serve_observability.py  settings.py  transformers_server.py
models/: Gemma-4-E2B-Uncensored-HauhauCS-Aggressive-Q4_K_P.gguf.json  Mistral-7B-Instruct-v0.3-Q4_K_M.gguf.json  Ouro-2.6B-Thinking.safetensors.json  (+14 more)
(+83 files in other folders)
